--- a/css/form.css
+++ b/css/form.css
@@ -13,11 +13,30 @@
 }
 .contact_form{
     width: 60%;
+    padding: 50px 50px;
+    box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
+-webkit-box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
+-moz-box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
 }
 #my-form label{
     display: flex;
     flex-direction: column;
+    padding: 15px;
 }
-label input, label textarea{
+label input{
     width: 100%;
+    height: 40px;
+    background-color: whitesmoke;
+    color: black;
+    border: none;
+} 
+label input:focus,label textarea:focus{
+    background-color: #f7f1eab6;
+    border: 1px solid #B191FF;
+}
+label textarea{
+    width: 100%;
+    background-color: whitesmoke;
+    color: black;
+    border: none;
 }
