--- a/css/form.css
+++ b/css/form.css
@@ -24,19 +24,13 @@
     padding: 15px;
 }
 label input{
-    width: 100%;
     height: 40px;
-    background-color: whitesmoke;
-    color: black;
-    border: none;
 } 
 label input:focus,label textarea:focus{
     background-color: #f7f1eab6;
-    border: 1px solid #B191FF;
+    border: none;
+    outline: none;
 }
 label textarea{
-    width: 100%;
-    background-color: whitesmoke;
-    color: black;
-    border: none;
+
 }
