--- a/css/form.css
+++ b/css/form.css
@@ -1,24 +1,49 @@
-.hidden{
-    display: none;
-}
+
 .contact_details{
     display: flex;
     justify-content: space-around;
-    padding: 80px 120px;
+    margin: 80px 150px;
     flex-direction: row;
-    align-items: center;
+    background-color: #A26769;
 }
 .contact_options{
     width: 40%;
+    display: flex;
+    flex-direction: column;
+    padding: 30px 0 0 50px;
+    text-align: center;
+}
+.contact_options p a {
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
+}
+.contact_options p{
+    padding: 25px 0;
+    border: 1px solid white;
+    margin: 20px 15px;
+    cursor: default;
+    display: flex;
+    flex-direction:column;
+}
+.contact_options p i{
+    border: none;
+    color: white;
+    cursor: not-allowed;
 }
 .contact_form{
+    background-color: white !important;
     width: 60%;
     padding: 50px 50px;
     box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
--webkit-box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
--moz-box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
+    -webkit-box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
+    -moz-box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
 }
-#my-form label{
+.contact_form h1{
+    font-size: 2.2rem;
+    padding-bottom: 20px;
+}
+#my-form p{
     display: flex;
     flex-direction: column;
     padding: 15px;
@@ -31,6 +56,11 @@ label input:focus,label textarea:focus{
     border: none;
     outline: none;
 }
-label textarea{
-
+.hidden{
+    display: none !important;
+}
+p button{
+    padding: 10px;
+    background-color: #B191FF;
+    border: none;
 }
