--- a/general.css
+++ b/general.css
@@ -11,7 +11,7 @@ body{
     width: 100%;
 }
 button,a,.logo,i{
-    cursor: url(assets/mouse-2588421.png),auto;
+    cursor: pointer;
 }
 input,textarea{
     cursor: pointer;
@@ -28,4 +28,11 @@ header{
 }
 main{
     z-index: 0;
+}
+footer{
+    height: 12vh;
+    background-color: #80A4ED;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
