--- a/css/form.css
+++ b/css/form.css
@@ -25,6 +25,7 @@
     cursor: default;
     display: flex;
     flex-direction:column;
+    border-radius: 4px;
 }
 .contact_options p i{
     border: none;
@@ -63,4 +64,5 @@ p button{
     padding: 10px;
     background-color: #B191FF;
     border: none;
+    border-radius: 4px;
 }
