--- a/css/subscribe.css
+++ b/css/subscribe.css
@@ -70,6 +70,7 @@
 
 .subs-wrapper{
 	width:100%;
+    height: 100%;
 	text-align:Center;
 }
 
@@ -96,4 +97,20 @@
 
 .iconize{
 	width:40px;
+}
+
+#subs-bg{
+    background-color: #242F40;
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 80px 0;
+}
+#subs-bg > div > h1{
+    font-size: 2rem;
+    font-weight: lighter;
+    text-align: center;
+    color: ghostwhite;
 }
