--- a/general.css
+++ b/general.css
@@ -6,6 +6,9 @@
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
 }
+html {
+    scroll-behavior: smooth;
+  }
 body{
     height: 100%;
     width: 100%;
