--- a/css/form.css
+++ b/css/form.css
@@ -1,4 +1,4 @@
-
+@media only screen and (min-width: 1200px) {
 .contact_details{
     display: flex;
     justify-content: space-around;
@@ -66,3 +66,354 @@ p button{
     border: none;
     border-radius: 4px;
 }
+}
+
+@media only screen and (max-width: 1199px) {
+    .contact_details{
+        display: flex;
+        justify-content: space-around;
+        margin: 80px 80px;
+        flex-direction: row;
+        background-color: #A26769;
+    }
+    .contact_options{
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        padding: 30px 0 0 50px;
+        text-align: center;
+    }
+    .contact_options p a {
+        text-decoration: none;
+        color: white;
+        cursor: pointer;
+    }
+    .contact_options p{
+        padding: 25px 0;
+        border: 1px solid white;
+        margin: 20px 15px 20px 0;
+        cursor: default;
+        display: flex;
+        flex-direction:column;
+        border-radius: 4px;
+    }
+    .contact_options p i{
+        border: none;
+        color: white;
+        cursor: not-allowed;
+    }
+    .contact_form{
+        background-color: white !important;
+        width: 60%;
+        padding: 50px 50px;
+        box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
+        -webkit-box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
+        -moz-box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
+    }
+    .contact_form h1{
+        font-size: 2.2rem;
+        padding-bottom: 20px;
+    }
+    #my-form p{
+        display: flex;
+        flex-direction: column;
+        padding: 15px;
+    }
+    label input{
+        height: 40px;
+    } 
+    label input:focus,label textarea:focus{
+        background-color: #f7f1eab6;
+        border: none;
+        outline: none;
+    }
+    .hidden{
+        display: none !important;
+    }
+    p button{
+        padding: 10px;
+        background-color: #B191FF;
+        border: none;
+        border-radius: 4px;
+    }
+    }
+    
+@media only screen and (max-width: 940px) {
+    .contact_details{
+        display: flex;
+        justify-content: space-around;
+        margin: 80px 20px;
+        flex-direction: row;
+        background-color: #A26769;
+    }
+    .contact_options{
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        padding: 30px 0 0 50px;
+        text-align: center;
+    }
+    .contact_options p a {
+        text-decoration: none;
+        color: white;
+        cursor: pointer;
+    }
+    .contact_options p{
+        padding: 25px 0;
+        border: 1px solid white;
+        margin: 20px 15px 20px 0;
+        cursor: default;
+        display: flex;
+        flex-direction:column;
+        border-radius: 4px;
+    }
+    .contact_options p i{
+        border: none;
+        color: white;
+        cursor: not-allowed;
+    }
+    .contact_form{
+        background-color: white !important;
+        width: 60%;
+        padding: 50px 50px;
+        box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
+        -webkit-box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
+        -moz-box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
+    }
+    .contact_form h1{
+        font-size: 2.2rem;
+        padding-bottom: 20px;
+    }
+    #my-form p{
+        display: flex;
+        flex-direction: column;
+        padding: 15px;
+    }
+    label input{
+        height: 40px;
+    } 
+    label input:focus,label textarea:focus{
+        background-color: #f7f1eab6;
+        border: none;
+        outline: none;
+    }
+    .hidden{
+        display: none !important;
+    }
+    p button{
+        padding: 10px;
+        background-color: #B191FF;
+        border: none;
+        border-radius: 4px;
+    }
+    }
+    
+@media only screen and (max-width: 814px) {
+    .contact_details{
+        display: flex;
+        justify-content: space-between;
+        margin: 80px 80px;
+        flex-direction: column-reverse;
+        background-color: #A26769;
+    }
+    .contact_options{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        padding: 30px;
+        text-align: center;
+    }
+    .contact_options p a {
+        text-decoration: none;
+        color: white;
+        cursor: pointer;
+    }
+    .contact_options p{
+        padding: 25px 0;
+        border: 1px solid white;
+        margin: 20px 15px 20px 0;
+        cursor: default;
+        display: flex;
+        flex-direction:column;
+        border-radius: 4px;
+    }
+    .contact_options p i{
+        border: none;
+        color: white;
+        cursor: not-allowed;
+    }
+    .contact_form{
+        background-color: white !important;
+        width: 100%;
+        padding: 50px 50px;
+        box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
+        -webkit-box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
+        -moz-box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
+    }
+    .contact_form h1{
+        font-size: 2.2rem;
+        padding-bottom: 20px;
+    }
+    #my-form p{
+        display: flex;
+        flex-direction: column;
+        padding: 15px;
+    }
+    label input{
+        height: 40px;
+    } 
+    label input:focus,label textarea:focus{
+        background-color: #f7f1eab6;
+        border: none;
+        outline: none;
+    }
+    .hidden{
+        display: none !important;
+    }
+    p button{
+        padding: 10px;
+        background-color: #B191FF;
+        border: none;
+        border-radius: 4px;
+    }
+    }
+       
+@media only screen and (max-width: 814px) {
+    .contact_details{
+        display: flex;
+        justify-content: space-between;
+        margin: 80px 80px;
+        flex-direction: column-reverse;
+        background-color: #A26769;
+    }
+    .contact_options{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        padding: 30px;
+        text-align: center;
+    }
+    .contact_options p a {
+        text-decoration: none;
+        color: white;
+        cursor: pointer;
+    }
+    .contact_options p{
+        padding: 25px 0;
+        border: 1px solid white;
+        margin: 20px 15px 20px 0;
+        cursor: default;
+        display: flex;
+        flex-direction:column;
+        border-radius: 4px;
+    }
+    .contact_options p i{
+        border: none;
+        color: white;
+        cursor: not-allowed;
+    }
+    .contact_form{
+        background-color: white !important;
+        width: 100%;
+        padding: 50px 50px;
+        box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
+        -webkit-box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
+        -moz-box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
+    }
+    .contact_form h1{
+        font-size: 2.2rem;
+        padding-bottom: 20px;
+    }
+    #my-form p{
+        display: flex;
+        flex-direction: column;
+        padding: 15px;
+    }
+    label input{
+        height: 40px;
+    } 
+    label input:focus,label textarea:focus{
+        background-color: #f7f1eab6;
+        border: none;
+        outline: none;
+    }
+    .hidden{
+        display: none !important;
+    }
+    p button{
+        padding: 10px;
+        background-color: #B191FF;
+        border: none;
+        border-radius: 4px;
+    }
+    }
+    @media only screen and (max-width: 663px) {
+        .contact_details{
+            display: flex;
+            justify-content: space-between;
+            margin: 80px 20px;
+            flex-direction: column-reverse;
+            background-color: #A26769;
+        }
+        .contact_options{
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            padding: 30px;
+            text-align: center;
+        }
+        .contact_options p a {
+            text-decoration: none;
+            color: white;
+            cursor: pointer;
+        }
+        .contact_options p{
+            padding: 25px 0;
+            border: 1px solid white;
+            margin: 20px 15px 20px 0;
+            cursor: default;
+            display: flex;
+            flex-direction:column;
+            border-radius: 4px;
+        }
+        .contact_options p i{
+            border: none;
+            color: white;
+            cursor: not-allowed;
+        }
+        .contact_form{
+            background-color: white !important;
+            width: 100%;
+            padding: 50px 50px;
+            box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
+            -webkit-box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
+            -moz-box-shadow: 0px -1px 52px -13px rgba(0,0,0,0.7);
+        }
+        .contact_form h1{
+            font-size: 1.5rem;
+            padding-bottom: 20px;
+            text-align: center;
+        }
+        #my-form p{
+            display: flex;
+            flex-direction: column;
+            padding: 15px;
+        }
+        label input{
+            height: 40px;
+        } 
+        label input:focus,label textarea:focus{
+            background-color: #f7f1eab6;
+            border: none;
+            outline: none;
+        }
+        .hidden{
+            display: none !important;
+        }
+        p button{
+            padding: 10px;
+            background-color: #B191FF;
+            border: none;
+            border-radius: 4px;
+        }
+        }
