--- a/css/wbps.css
+++ b/css/wbps.css
@@ -48,3 +48,222 @@
     color: white;
     text-decoration: none;
 }
+
+@media only screen and (max-width: 1130px) {
+    .plugin_section{
+        display: flex;
+        flex-direction: row;
+        height: 450px;
+        padding: 60px 30px 60px 60px;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .wbps_page{
+        width: 60%;
+    }
+    .wbps_h3{
+        font-size: 2rem;
+        font-weight: lighter;
+        color: blanchedalmond;
+        background-color: #B191FF;
+        padding: 8px;
+        margin-bottom: 5px;
+    }
+    .wbps_logo{
+        width: 25%;
+        padding-top: 0;
+    }
+    .wbps_logo_ img{
+        width: 100%;
+    }
+    .wbps_desc{
+        padding-bottom: 40px;
+    }
+    .wbps_links{
+        display: flex;
+    }
+    .wbps_links button{
+        padding: 10px;
+        margin: 10px 10px 10px 0;
+        border: none;
+        border-radius: 4px;
+    }
+    .wbps_doc_link1{
+        background-color: #A26769;
+        color: white;
+    }
+    .wbps_doc_link2{
+        background-color: #242F40;
+        color: white;
+    }
+    .wbps_doc_link2 > a {
+        color: white;
+        text-decoration: none;
+    }
+}
+
+@media only screen and (max-width: 879px) {
+    .plugin_section{
+        display: flex;
+        flex-direction: column;
+        height: 350px;
+        padding: 20px 30px 20px 60px;
+        align-items: center;
+        justify-content: center;
+    }
+    .wbps_page{
+        width: 100%;
+    }
+    .wbps_h3{
+        font-size: 2rem;
+        font-weight: lighter;
+        color: blanchedalmond;
+        background-color: #B191FF;
+        padding: 8px;
+        margin-bottom: 5px;
+    }
+    .wbps_logo{
+        width: 0%;
+        padding-top: 0;
+        display: none;
+    }
+    .wbps_logo_ img{
+        width: 100%;
+        display: none;
+    }
+    .wbps_desc{
+        padding-bottom: 40px;
+    }
+    .wbps_links{
+        display: flex;
+    }
+    .wbps_links button{
+        padding: 10px;
+        margin: 10px 10px 10px 0;
+        border: none;
+        border-radius: 4px;
+    }
+    .wbps_doc_link1{
+        background-color: #A26769;
+        color: white;
+    }
+    .wbps_doc_link2{
+        background-color: #242F40;
+        color: white;
+    }
+    .wbps_doc_link2 > a {
+        color: white;
+        text-decoration: none;
+    }
+}
+
+@media only screen and (max-width: 564px) {
+    .plugin_section{
+        display: flex;
+        flex-direction: column;
+        height: 350px;
+        padding: 20px 30px 20px 60px;
+        align-items: center;
+        justify-content: center;
+    }
+    .wbps_page{
+        width: 100%;
+    }
+    .wbps_h3{
+        font-size: 1.5rem;
+        font-weight: lighter;
+        color: blanchedalmond;
+        background-color: #B191FF;
+        padding: 8px;
+        margin-bottom: 5px;
+    }
+    .wbps_logo{
+        width: 0%;
+        padding-top: 0;
+        display: none;
+    }
+    .wbps_logo_ img{
+        width: 100%;
+        display: none;
+    }
+    .wbps_desc{
+        padding-bottom: 40px;
+    }
+    .wbps_links{
+        display: flex;
+    }
+    .wbps_links button{
+        padding: 10px;
+        margin: 10px 10px 10px 0;
+        border: none;
+        border-radius: 4px;
+    }
+    .wbps_doc_link1{
+        background-color: #A26769;
+        color: white;
+    }
+    .wbps_doc_link2{
+        background-color: #242F40;
+        color: white;
+    }
+    .wbps_doc_link2 > a {
+        color: white;
+        text-decoration: none;
+    }
+}
+
+@media only screen and (max-width: 473px) {
+    .plugin_section{
+        display: flex;
+        flex-direction: column;
+        height: 350px;
+        padding: 30px 30px 20px 30px;
+        align-items: center;
+        justify-content: center;
+    }
+    .wbps_page{
+        width: 100%;
+    }
+    .wbps_h3{
+        font-size: 1rem;
+        font-weight: lighter;
+        color: blanchedalmond;
+        background-color: #B191FF;
+        padding: 8px;
+        margin-bottom: 5px;
+    }
+    .wbps_logo{
+        width: 0%;
+        padding-top: 0;
+        display: none;
+    }
+    .wbps_logo_ img{
+        width: 100%;
+        display: none;
+    }
+    .wbps_desc{
+        padding-bottom: 40px;
+    }
+    .wbps_links{
+        display: flex;
+        flex-direction: column;
+    }
+    .wbps_links button{
+        padding: 10px;
+        margin: 10px 10px 10px 0;
+        border: none;
+        border-radius: 4px;
+    }
+    .wbps_doc_link1{
+        background-color: #A26769;
+        color: white;
+    }
+    .wbps_doc_link2{
+        background-color: #242F40;
+        color: white;
+    }
+    .wbps_doc_link2 > a {
+        color: white;
+        text-decoration: none;
+    }
+}
