--- a/general.css
+++ b/general.css
@@ -5,13 +5,14 @@
     margin: 0;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
+    padding: 0;
 }
 html {
     scroll-behavior: smooth;
   }
 body{
     height: 100%;
-    width: 100%;
+    width: 100vw;
 }
 button,a,.logo,i{
     cursor: pointer;
