--- a/css/shalomt.css
+++ b/css/shalomt.css
@@ -507,6 +507,7 @@ p.serv_colhead{
         .prof_skills,.people_skills{
             padding-bottom: 20px;
             color: #E7D7C1;
+            font-size: 2.2rem;
         }
         .meter { 
             height: 5px;
