--- a/css/wbps.css
+++ b/css/wbps.css
@@ -12,8 +12,8 @@
 .wbps_h3{
     font-size: 2rem;
     font-weight: lighter;
-    color: blanchedalmond;
-    background-color: #B191FF;
+    color: black;
+    background-color: #00e5f2;
     padding: 8px;
     margin-bottom: 5px;
 }
@@ -37,8 +37,8 @@
     border-radius: 4px;
 }
 .wbps_doc_link1{
-    background-color: #A26769;
-    color: white;
+    background-color: #e4c465;
+        color: black;
 }
 .wbps_doc_link2{
     background-color: #242F40;
@@ -64,8 +64,8 @@
     .wbps_h3{
         font-size: 2rem;
         font-weight: lighter;
-        color: blanchedalmond;
-        background-color: #B191FF;
+        color: black;
+    background-color: #00e5f2;
         padding: 8px;
         margin-bottom: 5px;
     }
@@ -89,8 +89,8 @@
         border-radius: 4px;
     }
     .wbps_doc_link1{
-        background-color: #A26769;
-        color: white;
+        background-color: #e4c465;
+        color: black;
     }
     .wbps_doc_link2{
         background-color: #242F40;
@@ -117,8 +117,8 @@
     .wbps_h3{
         font-size: 2rem;
         font-weight: lighter;
-        color: blanchedalmond;
-        background-color: #B191FF;
+        color: black;
+    background-color: #00e5f2;
         padding: 8px;
         margin-bottom: 5px;
     }
@@ -144,8 +144,8 @@
         border-radius: 4px;
     }
     .wbps_doc_link1{
-        background-color: #A26769;
-        color: white;
+        background-color: #e4c465;
+        color: black;
     }
     .wbps_doc_link2{
         background-color: #242F40;
@@ -172,8 +172,8 @@
     .wbps_h3{
         font-size: 1.2rem;
         font-weight: lighter;
-        color: blanchedalmond;
-        background-color: #B191FF;
+        color: black;
+    background-color: #00e5f2;
         padding: 8px;
         margin-bottom: 5px;
     }
@@ -199,8 +199,8 @@
         border-radius: 4px;
     }
     .wbps_doc_link1{
-        background-color: #A26769;
-        color: white;
+        background-color: #e4c465;
+        color: black;
     }
     .wbps_doc_link2{
         background-color: #242F40;
@@ -255,8 +255,8 @@
         border-radius: 4px;
     }
     .wbps_doc_link1{
-        background-color: #A26769;
-        color: white;
+        background-color: #e4c465;
+        color: black;
     }
     .wbps_doc_link2{
         background-color: #242F40;
