--- a/css/form.css
+++ b/css/form.css
@@ -1,10 +1,34 @@
+.contact_bg{
+    background-image: url(https://images.unsplash.com/photo-1513569771920-c9e1d31714af?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80);
+    padding: 80px 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    position: relative;
+    z-index: -1;
+}
+
+.contact_bg::after{
+    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    position: absolute;
+    display: block;
+    content: "";
+    background-color: rgba(0,0,0,0.5);
+    z-index: -1;
+}
+
 @media only screen and (min-width: 1200px) {
 .contact_details{
     display: flex;
     justify-content: space-around;
-    margin: 80px 150px;
+    margin: 0 150px;
     flex-direction: row;
-    background-color: #A26769;
+    background-color: #004d5f;
 }
 .contact_options{
     width: 40%;
@@ -62,7 +86,8 @@ label input:focus,label textarea:focus{
 }
 p button{
     padding: 10px;
-    background-color: #B191FF;
+    background-color: #176575;
+    color: white;
     border: none;
     border-radius: 4px;
 }
@@ -72,9 +97,9 @@ p button{
     .contact_details{
         display: flex;
         justify-content: space-around;
-        margin: 80px 80px;
+        margin: 40px 80px;
         flex-direction: row;
-        background-color: #A26769;
+        background-color: #004d5f;
     }
     .contact_options{
         width: 40%;
@@ -132,19 +157,28 @@ p button{
     }
     p button{
         padding: 10px;
-        background-color: #B191FF;
+        background-color: #176575;
+        color: white;
         border: none;
         border-radius: 4px;
+    }
+    .contact_bg{
+        background-color: rgb(21, 21, 21);
+        padding: 20px 0;
     }
     }
     
 @media only screen and (max-width: 940px) {
+    .contact_bg{
+        background-color: rgb(21, 21, 21);
+        padding: 20px 0;
+    }
     .contact_details{
         display: flex;
         justify-content: space-around;
-        margin: 80px 20px;
+        margin: 40px 20px;
         flex-direction: row;
-        background-color: #A26769;
+        background-color: #004d5f;
     }
     .contact_options{
         width: 40%;
@@ -202,19 +236,24 @@ p button{
     }
     p button{
         padding: 10px;
-        background-color: #B191FF;
+        background-color: #176575;
+        color: white;
         border: none;
         border-radius: 4px;
     }
     }
     
 @media only screen and (max-width: 814px) {
+    .contact_bg{
+        background-color: rgb(21, 21, 21);
+        padding: 20px 0;
+    }
     .contact_details{
         display: flex;
         justify-content: space-between;
-        margin: 80px 80px;
+        margin: 40px 80px;
         flex-direction: column-reverse;
-        background-color: #A26769;
+        background-color: #004d5f;
     }
     .contact_options{
         width: 100%;
@@ -272,19 +311,24 @@ p button{
     }
     p button{
         padding: 10px;
-        background-color: #B191FF;
+        background-color: #176575;
+        color: white;
         border: none;
         border-radius: 4px;
     }
     }
        
 @media only screen and (max-width: 814px) {
+    .contact_bg{
+        background-color: rgb(21, 21, 21);
+        padding: 20px 0;
+    }
     .contact_details{
         display: flex;
         justify-content: space-between;
-        margin: 80px 80px;
+        margin: 40px 80px;
         flex-direction: column-reverse;
-        background-color: #A26769;
+        background-color: #004d5f;
     }
     .contact_options{
         width: 100%;
@@ -342,19 +386,23 @@ p button{
     }
     p button{
         padding: 10px;
-        background-color: #B191FF;
+        background-color: #176575;
+        color: white;
         border: none;
         border-radius: 4px;
     }
     }
     @media only screen and (max-width: 663px) {
+        .contact_bg{
+            background-color: rgb(21, 21, 21);
+            padding: 20px 0;
+        }
         .contact_details{
             display: flex;
             justify-content: space-between;
-            margin: 80px 20px;
+            margin: 40px 20px;
             flex-direction: column-reverse;
-            background-color: #A26769;
-        }
+            background-color: #004d5f;}
         .contact_options{
             width: 100%;
             display: flex;
@@ -412,7 +460,8 @@ p button{
         }
         p button{
             padding: 10px;
-            background-color: #B191FF;
+            background-color: #176575;
+            color: white;
             border: none;
             border-radius: 4px;
         }
