--- a/css/shalomt.css
+++ b/css/shalomt.css
@@ -1,45 +1,48 @@
-
 /* Icons */
-.fab,.fa-envelope{
-    padding: 10px;
-    border: 1.5px solid #B191FF;
-    border-radius: 60px;
-    color: #B191FF;
+.fab,
+.fa-envelope {
+	padding: 10px;
+	border: 1.5px solid #00f6f6;
+	border-radius: 60px;
+	color: #00f6f6;
 }
 /* Fonts */
-.my_name,.design_name,.serv_colhead{
-    font-size: 3rem;
+.my_name,
+.design_name,
+.serv_colhead {
+	font-size: 3rem;
 }
-.col_title{
-    font-weight: lighter;
+.col_title {
+	font-weight: lighter;
 }
-.serv_title{
-
-    font-size: 3rem;
-    font-weight: lighter;
+.serv_title {
+	font-size: 3rem;
+	font-weight: lighter;
 }
-.prof_skills,.people_skills{
-    font-size: 2.5rem;
-    font-weight: lighter;
+.prof_skills,
+.people_skills {
+	font-size: 2.5rem;
+	font-weight: lighter;
 }
-.ts,.wpdev{
-    font-size: 1.3rem;
-    font-weight: lighter;
-    letter-spacing: 2px;
+.ts,
+.wpdev {
+	font-size: 1.3rem;
+	font-weight: lighter;
+	letter-spacing: 2px;
 }
-.fa-long-arrow-alt-left{
-    font-weight: lighter;
+.fa-long-arrow-alt-left {
+	font-weight: lighter;
 }
 /******************** Header *******************/
-.desktop-nav{
-    justify-content: end !important;
+.desktop-nav {
+	justify-content: end !important;
 }
-.btn-contact{
-    background-color: #471ead !important;
-    color: white !important;
+.btn-contact {
+	background-color: #e4c465 !important;
+	color: black !important;
 }
-.btn-contact-link{
-    text-decoration:  none !important;
+.btn-contact-link {
+	text-decoration: none !important;
 }
 /* Logo */
 /* @media only screen and (min-width: 750px) {
@@ -52,8 +55,8 @@
     .logo{
         height: 50px;
     } */
-    /* Nav */
-    /* header{
+/* Nav */
+/* header{
         width: 100vw;
         position: fixed;
         display: flex;
@@ -93,8 +96,8 @@
     .logo{
         height: 50px;
     } */
-    /* Nav */
-    /* header{
+/* Nav */
+/* header{
         width: 100vw;
         position: fixed;
         display: flex;
@@ -126,436 +129,491 @@
     }
     } */
 /* Home column */
-@media only screen and (min-width: 1070px) {
-.home_cta{
-    width: 100%;
+
+.home_cta {
+	background-image: url(https://images.unsplash.com/photo-1478760329108-5c3ed9d495a0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80);
+	background-repeat: no-repeat;
+	background-size: cover;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    height: calc(100vh - 80px);
-    padding: 0 8vw;
+    justify-content: center;
+    padding: 0 10px;
 }
-.home_column_two > img{
+.home_column_one {
+	color: white;
+	display: flex;
+    flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
     width: 100%;
-    border-radius: 70%;
+    height: 100%;
+	border-radius: 0px;
+	backdrop-filter: blur(3px);
+	background-color: rgba(0, 0, 0, 0.297);
+	box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 8px;
+	border-bottom: 2px rgba(40, 40, 40, 0.35) solid;
 }
-.home_column_two{
-    width: 40%;
-}
-.about_me{
-    margin-bottom: 20px;
-    width: 65%;
-}
-.title_name{
-    margin-bottom: 20px;
-}
-.design_name{
-    color: #B191FF;
-    font-weight: bold;
-}
-}
-@media only screen and (max-width: 1069px) {
-    .home_cta{
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        height: calc(100vh - 180px);
-        padding: 0 6vw;
-    }
-    .home_column_two > img{
-        width: 100%;
-        border-radius: 70%;
-    }
-    .home_column_two{
-        width: 50%;
-    }
-    .about_me{
-        margin-bottom: 20px;
-        width: 50%;
-    }
-    .title_name{
-        margin-bottom: 20px;
-    }
-    .design_name{
-        color: #B191FF;
-        font-weight: bold;
-    }
-    }
-    @media only screen and (max-width: 850px) {
-        .home_cta{
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
-            height: calc(100vh -80px);
-            padding: 0 6vw;
-        }
-        .home_column_two > img{
-            width: 100%;
-            border-radius: 70%;
-        }
-        .home_column_two{
-            width: 50%;
-        }
-        .about_me{
-            margin-bottom: 20px;
-            width: 100%;
-            text-align: center;
-        }
-        .title_name{
-            margin-bottom: 20px;
-            text-align: center;
-            margin-top: 15px;
-        }
-        .title_name >.my_name{
-            font-size: 2rem;
-        }
-        .socials{
-            display: flex;
-            justify-content: center;
-        }
-        .design_name{
-            color: #B191FF;
-            font-weight: bold;
-            font-size: 2.5rem;
-        }
-        .col_title{
-            background-color: #E7D7C1;
-            height: auto;
-            color: #242F40;
-            text-align: center;
-            padding: 20px 20px 0 20px;
-        }
-        }
-/* skills */
-@media only screen and (min-width: 1411px) {
-p.serv_colhead{
+.title_name > .my_name, .about_me {
     text-align: center;
 }
-.col_title{
-    background-color: #E7D7C1;
-    height: auto;
-    color: #242F40;
-    padding: 20px;
+.socials a{
+    margin: 0 10px;
 }
 .skills{
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+    background-color: #004d5f;
 }
-.develop,.support{
-    width: 45%;
-    color: #e4c465;
+.develop,
+.support {
     text-align: center;
-    border: 1px solid #242F40;
-    margin: 50px 30px;
-    padding: 10px 20px;
-    font-weight: bold;
-
-}
-.develop{
-    background-image: url(/assets/skills_column.jpg);
-}
-.support{
-    background-image: url(/assets/skills_column.jpg);
-}
-.ts,.wpdev{
-    background-color: rgba(202, 202, 202, 0.623);
-    padding: 120px 20px;
-    width: 100%;
-}
-.serv_title{
-    width: 40%;
-    text-align: center;
-}
-.s_col1{
-    display: flex;
-}
-.s_bg{ 
-    width: 60%;
-
-    padding: 20px;
-}
-/* Skills */
-.skills_progress{
-    padding: 50px;
-    display: flex;
-    background-color: #80A4ED;
-}
-.professional{
-    width: 50%;
-}
-.people{
-    width: 50%;
-}
-.people_skills_li > ul{
-    padding: 0;
-    columns: 2;
-}
-.people_skills_li > ul > li{
+    border: 1px solid #ffffff;
+} 
+.progress {
+    background-color: #00f6f6 !important;
+} 
+.people_skills_li > ul > li {
     padding: 20px 0;
     font-weight: bold;
+    color: #fff;
 }
-.prof_skills,.people_skills{
-    padding-bottom: 20px;
-    color: #E7D7C1;
+@media only screen and (max-width: 408px) {
+    .title_name > .my_name{
+        font-size: 1.5rem !important;
+    }
+    .design_name{
+        font-size: 2rem !important;
+    }
 }
-.meter { 
-    height: 5px;
-    position: relative;
-    background: #e4c465;
-    overflow: hidden;
-    width: 70%;
-    margin-bottom: 20px;
+@media only screen and (min-width: 1070px) {
+	.home_cta {
+		width: 100%;
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		justify-content: center;
+		height: calc(100vh - 80px);
+	}
+	.about_me {
+		margin-bottom: 20px;
+		width: 65%;
+	}
+	.title_name {
+		margin-bottom: 20px;
+	}
+	.design_name {
+		color: #00f6f6;
+		font-weight: bold;
+	}
 }
+@media only screen and (max-width: 1069px) {
+	.home_cta {
+		width: 100%;
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		justify-content: center;
+		height: calc(100vh - 180px);
+	}
+	.about_me {
+		margin-bottom: 20px;
+		width: 50%;
+	}
+	.title_name {
+		margin-bottom: 20px;
+	}
+	.design_name {
+		color: #00f6f6;
+		font-weight: bold;
+	}
+}
+@media only screen and (max-width: 850px) {
+	.home_cta {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		height: calc(100vh -80px);
+	}
+	.about_me {
+		margin-bottom: 20px;
+		width: 100%;
+		text-align: center;
+	}
+	.title_name {
+		margin-bottom: 20px;
+		text-align: center;
+		margin-top: 15px;
+	}
+	.title_name > .my_name {
+		font-size: 2rem;
+	}
+	.socials {
+		display: flex;
+		justify-content: center;
+	}
+    
+	.design_name {
+		color: #00f6f6;
+		font-weight: bold;
+		font-size: 2.5rem;
+	}
+	.col_title {
+		background-color: #e7d7c1;
+		height: auto;
+		color: #242f40;
+		text-align: center;
+		padding: 20px 20px 0 20px;
+	}
+}
+/* skills */
+@media only screen and (min-width: 1411px) {
+	p.serv_colhead {
+		text-align: center;
+	}
+	.col_title {
+		background-color: #e7d7c1;
+		height: auto;
+		color: #242f40;
+		padding: 20px;
+	}
+	.skills {
+		display: flex;
+		flex-direction: row-reverse;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+	}
+	.develop,
+	.support {
+		width: 45%;
+		color: #e4c465;
+		text-align: center;
+		border: 1px solid #ffffff;
+		margin: 50px 30px;
+		padding: 10px 20px;
+		font-weight: bold;
+	}
+	.develop {
+		background-image: url(/assets/skills_column.jpg);
+	}
+	.support {
+		background-image: url(/assets/skills_column.jpg);
+	}
+	.ts,
+	.wpdev {
+		background-color: rgba(202, 202, 202, 0.623);
+		padding: 120px 20px;
+		width: 100%;
+	}
+	.serv_title {
+		width: 40%;
+		text-align: center;
+	}
+	.s_col1 {
+		display: flex;
+	}
+	.s_bg {
+		width: 60%;
 
-.meter span {
-    display: block;
-    height: 100%;
-}
+		padding: 20px;
+	}
+	/* Skills */
+	.skills_progress {
+		padding: 50px;
+		display: flex;
+		background-color: #004d5f;
+	}
+	.professional {
+		width: 50%;
+	}
+	.people {
+		width: 50%;
+	}
+	.people_skills_li > ul {
+		padding: 0;
+		columns: 2;
+	}
+	.people_skills_li > ul > li {
+		padding: 20px 0;
+		font-weight: bold;
+	}
+	.prof_skills,
+	.people_skills {
+		padding-bottom: 20px;
+		color: #e7d7c1;
+	}
+	.meter {
+		height: 5px;
+		position: relative;
+		background: #e4c465;
+		overflow: hidden;
+		width: 70%;
+		margin-bottom: 20px;
+	}
 
-.progress {
-    background-color: #471ead !important;
-}
+	.meter span {
+		display: block;
+		height: 100%;
+	}
 
-.progress_anim{
-    animation: progressBar 3s ease-in-out;
-    animation-fill-mode:both; 
-}
-@keyframes progressBar {
-0% { width: 0; }
-    100% { width: 100%; }
-}
-.subscribe{
-    background-color: #242F40;
-    padding: 60px;
-    display: flex;
-    justify-content: space-between;
-}
-.subs_form{
-    width: 45%;
-}
+	.progress {
+		background-color: #00f6f6 !important;
+	}
+
+	.progress_anim {
+		animation: progressBar 3s ease-in-out;
+		animation-fill-mode: both;
+	}
+	@keyframes progressBar {
+		0% {
+			width: 0;
+		}
+		100% {
+			width: 100%;
+		}
+	}
+	.subscribe {
+		background-color: #242f40;
+		padding: 60px;
+		display: flex;
+		justify-content: space-between;
+	}
+	.subs_form {
+		width: 45%;
+	}
 }
 @media only screen and (max-width: 1410px) {
-    p.serv_colhead{
-        text-align: center;
+	p.serv_colhead {
+		text-align: center;
+	}
+	.col_title {
+		background-color: #e7d7c1;
+		height: auto;
+		color: #242f40;
+		padding: 20px;
+	}
+	.skills {
+		display: flex;
+		flex-direction: row-reverse;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+	}
+	.develop,
+	.support {
+		width: 45%;
+		color: black;
+		text-align: center;
+		border: 1px solid #fff;
+		margin: 50px 30px;
+		padding: 10px 20px;
+		font-weight: bold;
+	}
+
+	.ts,
+	.wpdev {
+		background-color: rgba(202, 202, 202, 0.623);
+		padding: 100px 0;
+		width: 100%;
+	}
+	.serv_title {
+		display: none;
+	}
+	.s_col1 {
+		display: flex;
+		flex-direction: row;
+	}
+	.s_bg {
+		width: 100%;
+
+		padding: 20px;
+	}
+	/* Skills */
+	.skills_progress {
+		padding: 50px;
+		display: flex;
+		background-color: #004d5f;
+	}
+	.professional {
+		width: 50%;
+	}
+	.people {
+		width: 50%;
+	}
+	.people_skills_li > ul {
+		padding: 0;
+		columns: 2;
+	}
+	.people_skills_li > ul > li {
+		padding: 20px 0;
+		font-weight: bold;
+	}
+	.prof_skills,
+	.people_skills {
+		padding-bottom: 20px;
+		color: #e7d7c1;
+		font-size: 2rem;
+	}
+    .program{
+        color: white;
+        padding: 10px 0;
     }
-    .col_title{
-        background-color: #E7D7C1;
-        height: auto;
-        color: #242F40;
-        padding: 20px;
-    }
-    .skills{
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-    }
-    .develop,.support{
-        width: 45%;
-        color: black;
-        text-align: center;
-        border: 1px solid #242F40;
-        margin: 50px 30px;
-        padding: 10px 20px;
-        font-weight: bold;
-    
-    }
-    
-    .ts,.wpdev{
-        background-color: rgba(202, 202, 202, 0.623);
-        padding: 100px 0;
-        width: 100%;
-    }
-    .serv_title{
-        display: none;
-    }
-    .s_col1{
-        display: flex;
-        flex-direction: row;
-    }
-    .s_bg{ 
-        width: 100%;
-    
-        padding: 20px;
-    }
-    /* Skills */
-    .skills_progress{
-        padding: 50px;
-        display: flex;
-        background-color: #80A4ED;
-    }
-    .professional{
-        width: 50%;
-    }
-    .people{
-        width: 50%;
-    }
-    .people_skills_li > ul{
-        padding: 0;
-        columns: 2;
-    }
-    .people_skills_li > ul > li{
-        padding: 20px 0;
-        font-weight: bold;
-    }
-    .prof_skills,.people_skills{
-        padding-bottom: 20px;
-        color: #E7D7C1;
-        font-size: 2rem;
-    }
-    .meter { 
-        height: 5px;
-        position: relative;
-        background: #e4c465;
-        overflow: hidden;
-        width: 70%;
-        margin-bottom: 20px;
-    }
-    
-    .meter span {
-        display: block;
-        height: 100%;
-    }
-    
-    .progress {
-        background-color: #471ead;
-    }
-    
-    .progress_anim{
-        animation: progressBar 3s ease-in-out;
-        animation-fill-mode:both; 
-    }
-    @keyframes progressBar {
-    0% { width: 0; }
-        100% { width: 100%; }
-    }
-    .subscribe{
-        background-color: #242F40;
-        padding: 60px;
-        display: flex;
-        justify-content: space-between;
-    }
-    .subs_form{
-        width: 45%;
-    }
-    }
-    @media only screen and (max-width: 798px) {
-        p.serv_colhead{
-            text-align: center;
-        }
-        .col_title{
-            background-color: #E7D7C1;
-            height: auto;
-            color: #242F40;
-            padding: 20px;
-        }
-        .skills{
-            display: flex;
-            flex-direction: row-reverse;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-        }
-        .develop,.support{
-            width: auto;
-            color: black;
-            text-align: center;
-            border: 1px solid #242F40;
-            margin: 50px 30px;
-            padding: 10px 20px;
-            font-weight: bold;
-        
-        }
-        
-        .ts,.wpdev{
-            background-color: rgba(202, 202, 202, 0.623);
-            padding: 100px 0;
-            width: 100%;
-        }
-        .serv_title{
-            display: none;
-        }
-        .s_col1{
-            display: flex;
-            flex-direction: column;
-        }
-        .s_bg{ 
-            width: 100%;
-        
-            padding: 20px;
-        }
-        /* Skills */
-        .skills_progress{
-            padding: 50px;
-            display: flex;
-            background-color: #80A4ED;
-            flex-direction: column;
-        }
-        .professional{
-            width: 100%;
-        }
-        .people{
-            width: 100%;
-        }
-        .people_skills_li > ul{
-            padding: 0;
-            columns: 1;
-        }
-        .people_skills_li > ul > li{
-            padding: 20px 0;
-            font-weight: bold;
-        }
-        .prof_skills,.people_skills{
-            padding-bottom: 20px;
-            color: #E7D7C1;
-            font-size: 1.8rem;
-        }
-        .meter { 
-            height: 5px;
-            position: relative;
-            background: #e4c465;
-            overflow: hidden;
-            width: 100%;
-            margin-bottom: 20px;
-        }
-        
-        .meter span {
-            display: block;
-            height: 100%;
-        }
-        
-        .progress {
-            background-color: #471ead;
-        }
-        
-        .progress_anim{
-            animation: progressBar 3s ease-in-out;
-            animation-fill-mode:both; 
-        }
-        @keyframes progressBar {
-        0% { width: 0; }
-            100% { width: 100%; }
-        }
-        .subscribe{
-            background-color: #242F40;
-            padding: 60px;
-            display: flex;
-            justify-content: space-between;
-        }
-        .subs_form{
-            width: 45%;
-        }
-        }
-        .copyright{
-            text-align: center;
-            font-size: 15px;
-        } 
+	.meter {
+		height: 5px;
+		position: relative;
+		background: #e4c465;
+		overflow: hidden;
+		width: 70%;
+		margin-bottom: 20px;
+        margin-top: 10px;
+	}
+
+	.meter span {
+		display: block;
+		height: 100%;
+	}
+
+	.progress {
+		background-color: #00f6f6;
+	}
+
+	.progress_anim {
+		animation: progressBar 3s ease-in-out;
+		animation-fill-mode: both;
+	}
+	@keyframes progressBar {
+		0% {
+			width: 0;
+		}
+		100% {
+			width: 100%;
+		}
+	}
+	.subscribe {
+		background-color: #242f40;
+		padding: 60px;
+		display: flex;
+		justify-content: space-between;
+	}
+	.subs_form {
+		width: 45%;
+	}
+}
+@media only screen and (max-width: 798px) {
+	p.serv_colhead {
+		text-align: center;
+	}
+	.col_title {
+		background-color: #e7d7c1;
+		height: auto;
+		color: #242f40;
+		padding: 20px;
+	}
+	.skills {
+		display: flex;
+		flex-direction: row-reverse;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+	}
+	.develop,
+	.support {
+		width: auto;
+		color: black;
+		text-align: center;
+		border: 1px solid #fff;
+		margin: 50px 30px;
+		padding: 10px 20px;
+		font-weight: bold;
+	}
+
+	.ts,
+	.wpdev {
+		background-color: rgba(202, 202, 202, 0.623);
+		padding: 100px 0;
+		width: 100%;
+	}
+	.serv_title {
+		display: none;
+	}
+	.s_col1 {
+		display: flex;
+		flex-direction: column;
+	}
+	.s_bg {
+		width: 100%;
+
+		padding: 20px;
+	}
+	/* Skills */
+	.skills_progress {
+		padding: 50px;
+		display: flex;
+		background-color: #004d5f;
+		flex-direction: column;
+	}
+	.professional {
+		width: 100%;
+	}
+	.people {
+		width: 100%;
+	}
+	.people_skills_li > ul {
+		padding: 0;
+		columns: 1;
+	}
+	.people_skills_li > ul > li {
+		padding: 20px 0;
+		font-weight: bold;
+	}
+	.prof_skills,
+	.people_skills {
+		padding-bottom: 20px;
+		color: #e7d7c1;
+		font-size: 1.8rem;
+	}
+	.meter {
+		height: 5px;
+		position: relative;
+		background: #e4c465;
+		overflow: hidden;
+		width: 100%;
+		margin-bottom: 20px;
+	}
+
+	.meter span {
+		display: block;
+		height: 100%;
+	}
+
+	.progress {
+		background-color: #00f6f6;
+	}
+
+	.progress_anim {
+		animation: progressBar 3s ease-in-out;
+		animation-fill-mode: both;
+	}
+	@keyframes progressBar {
+		0% {
+			width: 0;
+		}
+		100% {
+			width: 100%;
+		}
+	}
+	.subscribe {
+		background-color: #242f40;
+		padding: 60px;
+		display: flex;
+		justify-content: space-between;
+	}
+	.subs_form {
+		width: 45%;
+	}
+}
+.copyright {
+	text-align: center;
+	font-size: 15px;
+}
+
