Fix: banner background adjustment

--- a/css/subscribe.css
+++ b/css/subscribe.css
@@ -64,7 +64,7 @@
 
 
 #subs-bg{
-    background-color: #041c1d;
+    background-color: #212529;
     height: auto;
     width: 100%;
     display: flex;
